--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 #spring.application.name=Book_My_Show_Application_July
+
 # MySQL connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/j_bms?createTableIfNotExists=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bms?createTableIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=Pass@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
 
 # Server port (optional)
-server.port=10001
+server.port=1011
+
+# Swagger Configuration
+spring.doc.api-docs.enabled=true
+spring.doc.swagger-ui.enabled=true
+spring.doc.swagger-ui.disable-swagger-default-url=true
